--- a/demo_sampling/inferential_error.Rmd
+++ b/demo_sampling/inferential_error.Rmd
@@ -3,7 +3,7 @@ title: "Sampling and Inference"
 author: "Soumya Ray"
 date: "October 11, 2014"
 output:
-  ioslides_pr`esentation:
+  ioslides_presentation:
     widescreen: yes
     smaller: true
     transition: faster
