Changed titles of demo_central_limit_theorem demos

--- a/demo_central_limit_theorem/demo_sample_means.Rmd
+++ b/demo_central_limit_theorem/demo_sample_means.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Tufte Handout"
+title: "Distrbution of Sample Means"
 author: "John Smith"
 date: "August 13th, 2014"
 output: rmarkdown::tufte_handout
